apps/traefik-dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.luukblankenstijn.nl`)
      middlewares:
        - name: proxy-auth
          namespace: authentik
      services:
        - name: api@internal
          kind: TraefikService
